[gd_scene load_steps=2 format=3 uid="uid://dcnv7c42q4elk"]

[ext_resource type="Script" path="res://components/ui/health_bar/HealthBar.gd" id="1_7rkvg"]

[node name="HealthBar" type="Node2D"]
z_index = 99
script = ExtResource("1_7rkvg")

[node name="ProgressBarContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="ProgressBarContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -5.0
offset_right = 48.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
